<resources>
    <string name="mainactivity_btn0">All Table</string>
    <string name="companyname">Company Name</string>
    <string name="aboutus_title">About Us</string>
    <string name="tableactivity_titlename">list of table</string>
    <string name="mainactivity_btn1">empty tables</string>
    <string name="mainactivity_btn2">In Order</string>
    <string name="mainactivity_btn3">printed</string>
    <string name="mainactivity_btn4">reserved</string>
    <string name="allviewactivity_titlename">Grouping</string>
    <string name="buyactivity_rowcount">Number of rows:</string>
    <string name="buyactivity_totalamount">Total Amount:</string>
    <string name="buyactivity_delete">Delete</string>
    <string name="buyactivity_finalstep">Finalize the order</string>
    <string name="buyactivity_titlename">Basket Cart</string>
    <string name="databaseactivity_activation">Activation code</string>
    <string name="databaseactivity_set">Record</string>
    <string name="registeractivity_save">submit information</string>
    <string name="registeractivity_brokercode">BrokerCode</string>
    <string name="registeractivity_delay">Search break:</string>
    <string name="registeractivity_groupcode">Group code</string>
    <string name="registeractivity_updatebtn">Update</string>
    <string name="registeractivity_lng">Software language</string>
    <string name="registeractivity_titlesize">Title Size</string>
    <string name="registeractivity_bodysize">Body Size</string>
    <string name="searchactivity_titlename">Product search</string>
    <string name="splashactivity_trayagin">try again</string>
    <string name="tableactivity_tabletype">List type</string>
    <string name="basketinfo_edexplain">Description</string>
    <string name="basketinfo_setexplain">Record Description</string>
    <string name="connectionfail_title">No internet connection</string>
    <string name="connectionfail_text">Your connection to the Internet is not established.</string>
    <string name="connectionfail_text2">Connect to the Internet to use the software.</string>
    <string name="connectionfail_gosetting">Internet settings</string>
    <string name="goodbasketitem_name">name:</string>
    <string name="goodbasketitem_goodname">Product Name :</string>
    <string name="goodbasketitem_amount">Amount :</string>
    <string name="goodbasketitem_explain">Description</string>
    <string name="grplist_name">Name</string>
    <string name="header_changedbbtn">Software change</string>
    <string name="goodorder_amount">Amount</string>
    <string name="goodorder_explain">Description</string>
    <string name="goodorder_addcard">Add to order</string>
    <string name="reservebox_name">name :</string>
    <string name="reservebox_mobile">Mobile :</string>
    <string name="reservebox_explain">Description (people)</string>
    <string name="reservebox_starttime">start time</string>
    <string name="reservebox_endtime">end  time</string>
    <string name="reservebox_date">Date</string>
    <string name="reservebox_setreservebtn">Register a reservation</string>
    <string name="reservebox_tvlisttitle">Reservation list</string>
    <string name="reserveitem_until">untile</string>
    <string name="tableitem_name">Table</string>
    <string name="tableitem_setfree">free</string>
    <string name="tableitem_infoexplain">Order details:</string>
    <string name="tableitem_tableexplain">Description:</string>
    <string name="tableitem_usetime">Use Time:</string>
    <string name="tableitem_brokerstate">Host:</string>
    <string name="tableitem_reserve">Reservation:</string>
    <string name="tableitem_selecttable">Select</string>
    <string name="tableitem_reservetable">Reserve</string>
    <string name="tableitem_changetable">Change table</string>
    <string name="tableitem_explinbtn">Description</string>
    <string name="tableitem_print">Print order</string>
    <string name="tableemptyitem_name">Table :</string>
    <string name="tableemptyitem_selecttable">select</string>
    <string name="textvalue_order">" orders "</string>
    <string name="textvalue_freetablemessage">Would you like to empty the shopping cart?</string>
    <string name="textvalue_deleteorderbasket">The shopping cart has been removed?</string>
    <string name="textvalue_notfound">there are no results</string>
    <string name="textvalue_setreserveorder">Place a reservation order</string>
    <string name="textvalue_versionname">Software version</string>
    <string name="textvalue_downloading">Loading…</string>
    <string name="textvalue_disconnectmessage">Communication problem, please try again</string>
    <string name="textvalue_imagefolername">"Photo folder name: "</string>
    <string name="textvalue_ipserver">"Server address  "</string>
    <string name="textvalue_edit">Repair</string>
    <string name="textvalue_login">Log in</string>
    <string name="textvalue_exitmessage">Click again to exit</string>
    <string name="textvalue_langdefult">default settings</string>
    <string name="textvalue_langenglish">English</string>
    <string name="textvalue_langpersian">Persian</string>
    <string name="textvalue_langarabic">Arabic</string>
    <string name="textvalue_receiveinformation">Receiving information</string>
    <string name="textvalue_resived">received</string>
    <string name="textvalue_tablelable">"  Table  "</string>
    <string name="toastvalue_dcmessage">No internet connection</string>
    <string name="toastvalue_permissiongrand">Permission was issued</string>
    <string name="toastvalue_permissiondoing">Activate the corresponding license</string>
    <string name="toastvalue_permissionresult">permission granted</string>
    <string name="toastvalue_unpermissionresult">permission denied</string>
    <string name="infostatearray_0">All tables</string>
    <string name="infostatearray_1">In Order</string>
    <string name="infostatearray_2">Registered</string>
    <string name="infostatearray_3">empty tables</string>
    <string name="infostatearray_4">Reserved</string>
    <string name="textvalue_ifdelete">Be deleted?</string>
    <string name="textvalue_ordering">Would you like to order?</string>
    <string name="textvalue_resdel">Can the reservation be deleted?</string>
    <string name="rstmiz_seeandprintbtn">View and print</string>
    <string name="rstmiz_reprint">Reprint</string>
    <string name="textvalue_freetable">Is the table empty?</string>
    <string name="textvalue_recorded">Was recorded</string>
    <string name="textvalue_reprinting">Reprint?</string>
    <string name="textvalue_transfertext">(transition from</string>
    <string name="textvalue_tvlistoftable">reservation list</string>
    <string name="textvalue_sendinformation">Sending information</string>
    <string name="textvalue_tagreserve">" (Reservation)  "</string>
    <string name="textvalue_editorder">Modify the order</string>
    <string name="textvalue_addtoorder">Add to order</string>
    <string name="textvalue_notrecorded">Not registered</string>
    <string name="textvalue_inserttruenumber">Please enter the correct number</string>
    <string name="textvalue_insertnumber">Enter the number</string>
    <string name="textvalue_setexplain">Record description</string>
    <string name="textvalue_printing">Printing order</string>
    <string name="textvalue_printagain">(Reprint)</string>
    <string name="textvalue_tabletag"> Table  </string>
    <string name="textvalue_factorcodetag"> Invoice code </string>
    <string name="textvalue_factortimetag"> Invoice time </string>
    <string name="textvalue_orderagaintag"> (reorder)</string>
    <string name="repprog_refresh">Retest</string>
    <string name="registeractivity_titlename">Settings</string>
    <string name="menu_cart">Cart</string>
    <string name="textvalue_tagall">All</string>
    <string name="textvalue_transfer_to">" to "</string>
    <string name="registeractivity_brokername">Broker Name</string>
    <string name="fragment_good_to_order">Order List</string>
    <string name="text_doyouchangemiz">Do You Want Change Table ?</string>
    <string name="app_name">کوثر</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="aboutus_address">نشانی  میدان توحید خیابان پرچم پلاک 37</string>
    <string name="aboutus_number">تلفن  3—66569320</string>
    <string name="aboutus_email">پست الکترونیک  info@Kits.ir</string>
</resources>