<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/basketinfo_explain"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@drawable/bg_overlay"
    android:layoutDirection="rtl"
    android:orientation="vertical">


    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="5dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/bg_card"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.7"
            android:gravity="center"
            android:text="@string/goodorder_explain"
            android:textColor="?attr/colorOnBackground"  />

        <Spinner
            android:id="@+id/basketinfo_spinnerexplain"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_weight="0.3"
            android:gravity="center"

            android:textAppearance="?attr/textAppearanceHeadline6"
            android:textColor="?attr/colorOnBackground" />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <EditText
        android:id="@+id/basketinfo_explain_tv"
        android:layout_width="250dp"
        android:layout_height="150dp"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:autofillHints=""
        android:background="@drawable/bg_editbox"
        android:focusable="true"
        android:gravity="center"
        android:hint="@string/basketinfo_edexplain"
        android:inputType="text"
        android:singleLine="true">


    </EditText>


    <Button
        android:id="@+id/basketinfo_explain_btn"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:gravity="center"
        android:text="@string/basketinfo_setexplain"
        style="@style/Widget.MaterialComponents.Button"
        android:backgroundTint="?attr/colorPrimary"
        android:textColor="?attr/colorOnPrimary"
        />

</androidx.appcompat.widget.LinearLayoutCompat>